--- a/language.css
+++ b/language.css
@@ -4,21 +4,39 @@
   box-sizing: border-box;
 }
 
-.star {
-  position: relative;
-  left: 0;
-  top: 0;
-  width: 1005;
-  height: 500px;
-}
-
 .intro {
-  position: fixed;
+  position: absolute;
   z-index: 1;
-  left: 1;
+  left: 0;
   top: 0;
   width: 100%;
   height: 100vh;
-  background-color: crimson;
+  background-color: #ffffff;
   transition: 1s;
+}
+
+.logo-header {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.logo {
+  position: relative;
+  display: inline-block;
+  bottom: -20px;
+  opacity: 0;
+}
+
+.logo.active {
+  bottom: 0;
+  opacity: 1;
+  transition: ease-in-out 0.5s;
+}
+
+.logo.fade {
+  bottom: 150px;
+  opacity: 0;
+  transition: ease-in-out 0.5s;
 }
