--- a/index.css
+++ b/index.css
@@ -16,7 +16,6 @@ html {
   align-items: center;
   justify-content: center;
   /* border */
-  border-style: solid;
   border-color: aqua;
 }
 
@@ -73,4 +72,111 @@ html {
   /* border */
 
   border-color: violet;
+}
+
+.content {
+  text-align: center;
+  table-layout: fixed;
+  border-collapse: collapse;
+}
+
+.btn {
+  align-items: center;
+  background-color: #b6862c;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 0.25rem;
+  box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0;
+  box-sizing: border-box;
+  color: rgba(0, 0, 0, 0.85);
+  cursor: pointer;
+  font-family: system-ui, -apple-system, system-ui, "Helvetica Neue", Helvetica,
+    Arial, sans-serif;
+  font-size: 1.75vh;
+  font-weight: 600;
+  justify-content: center;
+  line-height: 1.25;
+  min-height: 1rem;
+  padding: calc(0.875rem - 1px) calc(1vh - 1px);
+  text-decoration: none;
+  transition: all 250ms;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  display: inline-block;
+  position: relative;
+}
+
+.btn:hover,
+.btn:focus {
+  border-color: rgba(0, 0, 0, 0.15);
+  box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
+  color: rgba(0, 0, 0, 0.65);
+}
+
+.btn:hover {
+  transform: translateY(-10px);
+}
+
+.btn:active {
+  background-color: #b6862c;
+  border-color: rgba(0, 0, 0, 0.15);
+  box-shadow: rgba(0, 0, 0, 0.06) 0 2px 4px;
+  color: rgba(0, 0, 0, 0.65);
+  transform: translateY(0);
+}
+
+.join {
+  text-align: center;
+}
+
+.joinus {
+  text-align: center;
+  margin: 1%;
+  align-items: center;
+  background-color: #98191c;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 0.25rem;
+  box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0;
+  box-sizing: border-box;
+  color: #ffffff;
+  cursor: pointer;
+  font-family: system-ui, -apple-system, system-ui, "Helvetica Neue", Helvetica,
+    Arial, sans-serif;
+  font-size: 1.75vh;
+  font-weight: 600;
+  justify-content: center;
+  line-height: 1.25;
+  min-height: 1rem;
+  padding: calc(0.875rem - 1px) calc(1vh - 1px);
+  text-decoration: none;
+  transition: all 250ms;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  display: inline-block;
+  position: relative;
+  width: 50%;
+}
+
+.joinus:hover,
+.joinus:focus {
+  border-color: rgba(0, 0, 0, 0.15);
+  box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
+  color: #ffffff;
+}
+
+.joinus:hover {
+  transform: translateY(-10px);
+}
+
+.joinus:active {
+  background-color: #b6862c;
+  border-color: rgba(0, 0, 0, 0.15);
+  box-shadow: rgba(0, 0, 0, 0.06) 0 2px 4px;
+  color: #ffffff;
+  transform: translateY(0);
+}
+
+.join {
+  text-align: center;
 }
