--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@ html {
 
 @font-face {
   font-family: pro;
-  src: url(/fonts/ROHH\ \ Akwe\ Pro\ Black.otf);
+  src: url(fonts/ROHH\ \ Akwe\ Pro\ Black.otf);
 }
 
 /* DIV OF HEADER DIVS */
