--- a/index.css
+++ b/index.css
@@ -509,7 +509,7 @@ html {
 
 #adam h3 {
   margin-top: 15%;
-  margin-left: -11vw;
+  margin-left: -12.5vw;
   font-size: 1.5vw;
   float: left;
   font-weight: normal;
@@ -544,7 +544,7 @@ html {
 #emma h3 {
   font-size: 1.5vw;
   margin-top: 15%;
-  margin-right: -15vw;
+  margin-right: -16vw;
   font-size: 1.5vw;
   float: right;
   font-weight: normal;
@@ -578,7 +578,7 @@ html {
 
 #jacob h3 {
   margin-top: 15%;
-  margin-left: -24vw;
+  margin-left: -25vw;
   font-size: 1.5vw;
   float: left;
   font-weight: normal;
@@ -613,7 +613,7 @@ html {
 #oscar h3 {
   font-size: 1.5vw;
   margin-top: 15%;
-  margin-right: -17.5%;
+  margin-right: -16.5vw;
   font-size: 1.5vw;
   float: right;
   font-weight: normal;
@@ -682,7 +682,7 @@ html {
 #mauricio h3 {
   font-size: 1.5vw;
   margin-top: 15%;
-  margin-right: -16%;
+  margin-right: -14vw;
   font-size: 1.5vw;
   float: right;
   font-weight: normal;
@@ -730,4 +730,53 @@ html {
   border-width: thick;
   border-radius: 50vw;
   width: 100%;
+}
+
+#social_medias {
+  background-color: #081e3f;
+  height: 30vw;
+  width: 100%;
+  margin: auto;
+  border-top-left-radius: 5vh;
+  border-top-right-radius: 5vh;
+  text-align: center;
+  position: relative;
+}
+
+#social_medias img {
+  margin: 5%;
+  transition: all 250ms;
+}
+
+#social_medias img:hover,
+#social_medias img:focus {
+  border-color: rgba(0, 0, 0, 0.15);
+  color: #ffffff;
+}
+
+#social_medias img:hover {
+  transform: translateY(-5px);
+}
+
+#social {
+  position: absolute;
+  top: 25%;
+  margin: auto;
+}
+
+#twitter {
+  width: 11%;
+}
+
+#ig {
+  width: 10%;
+}
+
+#fb {
+  width: 10%;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
 }
