--- a/index.css
+++ b/index.css
@@ -23,7 +23,7 @@ html {
   max-width: 80%;
   margin: 0px auto;
   margin-bottom: 2%;
-  margin-top: 1%;s
+  margin-top: 1%;
 }
 
 .auto-resizable-iframe > div {
