--- a/index.css
+++ b/index.css
@@ -218,6 +218,24 @@ html {
   margin: auto;
 }
 
+
+.dbox-donation-button{
+  background: #081e3f;
+  color: #fff;
+  text-decoration: none;
+  font-family: Verdana, sans-serif;
+  display: inline-block;
+  font-size: 16px;
+  padding: 15px 38px;
+  padding-left: 75px;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  border-radius: 2px;
+  box-shadow: 0 1px 0 0 #1f5a89;
+  text-shadow: 0 1px rgba(0, 0, 0, 0.3);
+  margin-bottom: 5%;
+}
+
 #gbm1 {
   width: 29%;
   border-radius: 5%;
